Add basic Home and Root pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,11 @@
 :root {
-
+  --accent-color: #49aa19;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
 
   border: 0;
   outline: none;
