--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,17 +1,21 @@
-.list {
+.container {
   max-width: 430px;
   margin: auto;
   padding: 50px;
 }
 
+.filters {
+  margin-bottom: 20px;
+}
+
 @media (min-width: 576px) {
-  .list {
+  .container {
     max-width: unset;
   }
 }
 
 @media (min-width: 1200px) {
-  .list {
+  .container {
     max-width: 1200px;
   }
 }
